--- a/Books/Config/Development.xcconfig
+++ b/Books/Config/Development.xcconfig
@@ -8,4 +8,4 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-BASE_URL = https:/$()/rss.marketingtools.apple.com/api/v2/us
+BASE_URL = https:/$()/rss.marketingtools.apple.com/api/v2/us/
