Add favorites screen && book repository improvements

--- a/Info.plist
+++ b/Info.plist
@@ -4,5 +4,10 @@
 <dict>
 	<key>BASE_URL</key>
 	<string>$(BASE_URL)</string>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIColorName</key>
+		<string>launchScreenBackground</string>
+	</dict>
 </dict>
 </plist>
